# TJ_FX_ROBOT_CONTRL_SDK

./: .gitattributes  .gitignore  MarvinPlatform_win_100341.spec  PLN_MOVL.txt  PLN_MOVL_KEEPJ.txt  README.md  c++_doc_contrl.md  c++_doc_kine.md  ccs_m3.MvKDCfg  ccs_m6.MvKDCfg  marvinSDK_ubuntu 100343.sh  marvinSDK_ubuntu.sh  marvinSDK_ubuntu_100343.sh  marvinSDK_window.bat  marvinSDK_windows.bat  marvinSDK_windows_100343.bat  python_doc_contrl.md  python_doc_kine.md  readme.md  readme.txt  robot.ini  robot_M3_CCS_1003.ini  robot_M6_CCS.ini  srs.MvKDCfg  tools_cfg.json  清能德创故障代码及原因措施（CDA8-CDR-CDRC-CDS7-CDRA-CDRD）.xlsx
DEMO_C++/: API_USAGE_KINEMATICS.txt  FxRobot.h  FxRtCSDef.h  FxType.h  MarvinSDK.h  readme.md  servo_reset.cpp  showcase_JointTorque2EETorque.cpp  showcase_apply_brake_release_brake.cpp  showcase_cartesian_impedance_control.cpp  showcase_check_sdk_type_compat.cpp  showcase_cmd_delay.cpp  showcase_drag_CartImpedance_save_data.cpp  showcase_drag_JointImpedance_save_data.cpp  showcase_drag_joint.cpp  showcase_eef_485.cpp  showcase_eef_CAN.cpp  showcase_eef_cart_impedance.cpp  showcase_eef_force_control_bsed_on_eef_cart_impedance.cpp  showcase_ik_failed_conclusion.cpp  showcase_ik_nsp_two_arms.cpp  showcase_joint_impedance_control.cpp  showcase_kine_two_arms.cpp  showcase_kinematics_all_functions.cpp  showcase_link_check.cpp  showcase_new_control_sdk_usage.cpp  showcase_offline_movl_execution.cpp  showcase_offline_movl_keepj_execution.cpp  showcase_online_and_offline_pln_all_function.cpp  showcase_online_movj_execution.cpp  showcase_online_movl_keepja_execution.cpp  showcase_online_movla_execution.cpp  showcase_pln_Mov_Target_PositionMode.cpp  showcase_pln_PositionMode.cpp  showcase_pln_cartSpace_MultiPoints_PositionMode.cpp  showcase_pln_cartSpace_PositionMode.cpp  showcase_pln_cartSpace_PositionMode_with_break.cpp  showcase_pln_jointCmd_PositionMode.cpp  showcase_pln_jointSpace_PositionMode_two_arms.cpp  showcase_pln_jointSpace_PositionMode_with_break.cpp  (+6 more)
DEMO_PYTHON/: PLN_MOVL.txt  left_drag_y_data.txt  pln_movlj.csv  readme.md  showcase_485_arm_A.py  showcase_CAN_arm_A.py  showcase_apply-brake_release-brake.py  showcase_cart_drag_arm_A.py  showcase_check_cmd_delay.py  (+53 more)
ros2_pyhon/ServiceInvocationMethods/ros2_ws/src/marvin_interfaces/: CMakeLists.txt  package.xml
ros2_pyhon/ServiceInvocationMethods/ros2_ws/src/marvin_interfaces/msg/: Input.msg  Input_bak.msg  MarvinResponse.msg  MarvinResponse_bak.msg  Output.msg  Output_bak.msg  State.msg
ros2_pyhon/ServiceInvocationMethods/ros2_ws/src/marvin_interfaces/srv/: ArmClearErr.srv  ArmSoftStop.srv  CollectData.srv  Connect.srv  DownloadLog.srv  FK.srv  GetPara.srv  GetServoErrCode.srv  IK.srv  IkNsp.srv  IkRangeCross67.srv  InitialKine.srv  JointsToJacobMatrix.srv  LogSwitch.srv  ReceiveFile.srv  RobotData.srv  SaveCollectData.srv  SaveParam.srv  SendPvt.srv  SetArmState.srv  SetArmVelAcc.srv  SetCardKD.srv  SetDragSpace.srv  SetForceCmd.srv  SetForceCtrlPara.srv  SetImpedanceType.srv  SetJointCmdPos.srv  SetJointKD.srv  SetPara.srv  SetPvtId.srv  SetToolPara.srv  UpdateSdk.srv
ros2_pyhon/ServiceInvocationMethods/ros2_ws/src/marvin_robot/: package.xml  setup.cfg  setup.py
ros2_pyhon/ServiceInvocationMethods/ros2_ws/src/marvin_robot/marvin_robot/: robot_control_node.py
(+407 files in other folders)
