<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>marvin_robot</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="fusion@todo.todo">fusion</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend> <!-- 添加接口包依赖 -->
  <depend>std_msgs</depend>
  <depend>marvin_interfaces</depend> <!-- 添加接口包依赖 -->


  <exec_depend>rosidl_default_runtime</exec_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
   <!-- 运行时也需要 <exec_depend>marvin_interfaces</exec_depend> -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
